CHANGELOG
=========

DarkElements version 4.9 - january 2017
- some logical changes in class elements
- files style, header and nav: changed .nav-head info .nav-primary
- files style and header: changed .nav-head-title into .nav-primary-title
- added support for hentry tags
- updated files content-postmeta, content-list and single
- file style: improved comments display
- file custom-editor-style: removed theme colors (because theme can be customized)
- several small adjustments

DarkElements version 4.8 - october 2016
- some logical changes in div and class elements
- files style and header: changed #header into #sidebar
- files style and sidebar: changed #sidebar into #sidebar-widgets
- files style and header: changed .nav-widgettitle into .nav-head-title
- several small adjustments
- new screenshot

DarkElements version 4.7 - august 2016
- file functions: translation fix

DarkElements version 4.6 - august 2016
- file content-postmeta-single: display post format too
- updated text strings
- several small adjustments

DarkElements version 4.5 - august 2016
- cleanup: removed unnecessary white space from several files
- file style: removed unnecessary id tags from several strings
- file style: updated mobile stylesheet
- file style and custom-editor-style: several small adjustments
- file functions: updated feature for html5 support in ie 8 and older
- new screenshot

DarkElements version 4.4 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)
- file style: removed line-height from several elements

DarkElements version 4.3 - may 2016
- added file content-none 
- files 404, archive, index and search: relocated nothing found to separate file
- updated file index
- renamed both postmetadata files
- several small adjustments

DarkElements version 4.2 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 