@@ -1,7 +1,7 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 4.9
+Version: 5.0
 Requires at least: 4.2
 Tested up to: 4.7
 License: GNU General Public License v3 or later
@@ -35,9 +35,9 @@ Set a logo to replace site title and tagline via WordPress Dashboard > Appearanc
 You can add your own background(image) via WordPress Dashboard > Appearance > Customize.
 
 = Menu = 
-Theme offers a menu that can contain subpages (2 levels deep).
+You can create and set a menu via WordPress Dashboard > Appearance > Menus.
 
-You can create and set menu via WordPress Dashboard > Appearance > Menus.
+The sidebar menu and mobile menu support 2 levels of subpages.
 
 = Menu title =
 You can change the menu title via WordPress Dashboard > Appearance > Customize.
