@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 4.9
+Version: 5.0
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -68,7 +68,8 @@ table {
 
 /* BODY AND CONTAINER */
 body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; text-align:left; word-wrap:break-word;}
-#container {max-width:1000px; float:left; background:none; margin:20px 0 20px 20px;}
+#container {max-width:1000px; position:relative; background:none; margin:20px 0 20px 20px;}
+#container:after {content:''; display:block; height:0; clear:both;}
 
 
 /* MAIN CONTENT AREA */
@@ -98,8 +99,9 @@ cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
-address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
+address {margin:10px 0; font-style:italic;}
 p {margin:0 0 10px;}
+hr {height:1px; background:#444; border:0;}
 
 
 /* ALIGNMENTS */
@@ -123,13 +125,12 @@ dd {margin:0 0 0 20px;}
 
 
 /* INPUTS */
-input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #444; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px;}
+input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #ddd; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px;}
 input[type="submit"], input[type="reset"], input[type="button"], button {cursor:pointer; border:0; padding:2px 5px; background:#ddd; color:#333;}
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#e77776; color:#ddd;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
-select option {background:#fff; color:#333;} 
+select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#f8f8f8; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -138,7 +139,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR LOGO */
-.logo {width:100%; text-align:center; padding:0 0 20px;}
+.logo {width:100%; clear:both; float:left; text-align:center; padding:0 0 20px;}
 .logo h2 {padding:5px 0; font-size:1.20em;}
 .logo img {padding:10px 0 0;}
 
@@ -158,11 +159,11 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR MENU TITLE */
-.nav-primary-title {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.nav-primary-title {clear:both; color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
 
 
 /* WIDGETS */
-#sidebar-widgets {width:100%; float:left;}
+#sidebar-widgets {width:100%; clear:both; float:left;}
 .widget {padding:10px 0; margin:0 0 10px; background:none;}
 .widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
 
@@ -186,26 +187,25 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* PAGE */
 .page-title {clear:both; padding:0 0 10px;}
-.archive-description {display:block; font-style:italic;}
-.pagelink {clear:both; display:block; padding:20px 0 10px;}
+.archive-description {width:100%; clear:both; float:left; font-style:italic;}
+.pagelink {width:100%; clear:both; float:left; display:block; padding:20px 0 10px;}
 
 
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
 .post-title {clear:both;}
 .post-title-single {clear:both;}
-.sticky-title {clear:both; display:block; text-align:center; margin:0 0 10px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
-.postmetadata {clear:both; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
-.more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
+.sticky-title {clear:both; text-align:center; margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
+.postmetadata {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
+.more {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
 a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px;}
 a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
 
 
 /* POST FORMATS */
-.format-aside .post-title, .format-status .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.45em;}
-.format-aside .post-title-single, .format-status .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.45em;}
+.format-aside .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.45em;}
+.format-aside .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.45em;}
 .format-image .postmetadata, .format-video .postmetadata, .format-gallery .postmetadata, .format-audio .postmetadata {font-style:italic;}
-.format-status .avatar {width:96px; float:left; margin:0.4em 1em 0.4em 0; border-radius:5px;}
 
 
 /* POST NAV */
@@ -259,7 +259,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* COMMENTS RESPOND */
-#respond {width:100%; clear:both;}
+#respond {width:100%; clear:both; float:left;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
@@ -277,7 +277,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* FOOTER WIDGET AREA */
-#footer-widgets {width:100%; clear:both; float:right;}
+#footer-widgets {width:100%; clear:both; float:left;}
 .footer-left {float:left; width:31%; margin:10px 0 0 0;}
 .footer-middle {float:left; width:31%; margin:10px 3.5%;}
 .footer-right {float:right; width:31%; margin:10px 0 0 0;}
@@ -313,7 +313,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* SIDEBAR MENU */
 	.nav-primary ul {display:none;} 
 	.nav-primary {padding:0 0 10px;}
-	.nav-primary select {display:block; width:100%; height:35px; margin:0 auto 0; font-size:1em; line-height:1.2em; color:#333; background:#ddd; border:0;}
+	.nav-primary select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;}
 
 	/* SIDEBAR MENU TITLE */
 	.nav-primary-title {display:none;}
@@ -327,15 +327,12 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADER IMAGE MOBILE */
 	#header-image-mobile {display:block; width:100%; float:left; background:none;}
 
-	/* PAGE AND POST */
+	/* POST */
 	.postmetadata {margin:10px 0;}
 
 	/* HEADINGS */
 	.post-title, .page-title, .post-title-single {font-size:1.80em;}
 	.widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
-
-	/* POST FORMATS */
-	.format-status .avatar {margin:0.3em 0.5em 0.3em 0;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
