@@ -1,9 +1,17 @@
 CHANGELOG
 =========
 
+DarkElements version 5.0 - march 2017
+- file style: fixed alignment issue of #container
+- file style: minor changes in html tags
+- file style: styling of select tag (cross-browser compatibility)
+- file style: added width and float to several elements (for better alignment)
+- file functions and single: removed post format (status)
+- several small adjustments
+
 DarkElements version 4.9 - january 2017
 - some logical changes in class elements
-- files style, header and nav: changed .nav-head info .nav-primary
+- files style, header and nav: changed .nav-head into .nav-primary
 - files style and header: changed .nav-head-title into .nav-primary-title
 - added support for hentry tags
 - updated files content-postmeta, content-list and single
